--- a/src/pages/en/books/constitutional-economics.astro
+++ b/src/pages/en/books/constitutional-economics.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="en"
   type="article"
   author="Yang Xiaokai"
-  image="https://jidaisya.com/images/books/constitutional-economics.jpg"
+  image="https://jidaisha.com/images/books/constitutional-economics.jpg"
 >
   <Fragment slot="header"><Header lang="en" /></Fragment>
   
