--- a/src/pages/ja/books/china-syracuse-plato.astro
+++ b/src/pages/ja/books/china-syracuse-plato.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="ja"
   type="article"
   author="王力雄"
-  image="https://jidaisya.com/images/books/china-syracuse-plato.jpg"
+  image="https://jidaisha.com/images/books/china-syracuse-plato.jpg"
 >
   <Fragment slot="header"><Header lang="ja" /></Fragment>
   
