--- a/src/pages/ja/books/judicial-goddess.astro
+++ b/src/pages/ja/books/judicial-goddess.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="ja"
   type="article"
   author="賀衛方"
-  image="https://jidaisya.com/images/books/judicial-goddess.jpg"
+  image="https://jidaisha.com/images/books/judicial-goddess.jpg"
 >
   <Fragment slot="header"><Header lang="ja" /></Fragment>
   
