--- a/src/pages/en/books/china-syracuse-plato.astro
+++ b/src/pages/en/books/china-syracuse-plato.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="en"
   type="article"
   author="Wang Lixiong"
-  image="https://jidaisya.com/images/books/china-syracuse-plato.jpg"
+  image="https://jidaisha.com/images/books/china-syracuse-plato.jpg"
 >
   <Fragment slot="header"><Header lang="en" /></Fragment>
   
