--- a/src/pages/zh-cn/books/judicial-goddess.astro
+++ b/src/pages/zh-cn/books/judicial-goddess.astro
@@ -10,7 +10,7 @@ import Footer from '../../../components/Footer.astro';
   lang="zh-cn"
   type="article"
   author="贺卫方"
-  image="https://jidaisya.com/images/books/judicial-goddess.jpg"
+  image="https://jidaisha.com/images/books/judicial-goddess.jpg"
 >
   <Fragment slot="header"><Header lang="zh-cn" /></Fragment>
   
