--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -15,7 +15,7 @@ import Footer from '../../components/Footer.astro';
         <div class="space-y-3 text-gray-700">
           <div>
             <span class="font-medium">Company Name:</span>
-            <span> jidaisha Co., Ltd.</span>
+            <span> JiDaiSha Co., Ltd.</span>
           </div>
           <div>
             <span class="font-medium">Representative Director:</span>
