--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,7 +59,7 @@ const currentNav = navItems[lang] || navItems['zh-tw'];
       <img src="/images/brand/logo.png" alt="時代社" class="h-16 w-auto" />
       <span class="font-semibold text-[18px] text-[color:var(--brand-primary)] block sm:inline">
         <span class="block sm:inline">時代社</span>
-        <span class="hidden sm:inline"> jidaisha</span>
+        <span class="hidden sm:inline"> JIDAISHA</span>
       </span>
     </a>
 
