--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -15,7 +15,7 @@ import Footer from '../../components/Footer.astro';
         <div class="space-y-3 text-gray-700">
           <div>
             <span class="font-medium">Company Name:</span>
-            <span> JiDaiSha Co., Ltd.</span>
+            <span> JIDAISHA Co., Ltd.</span>
           </div>
           <div>
             <span class="font-medium">Representative Director:</span>
@@ -41,7 +41,7 @@ import Footer from '../../components/Footer.astro';
                 <span class="text-gray-500 text-sm">(Chinese, Japanese)</span>
               </div>
               <div class="flex items-center">
-                <a href="mailto:katsuyo@gmail.com" class="text-blue-600 hover:underline mr-2">katsuyo@gmail.com</a>
+                <a href="mailto:katsuyokobe@gmail.com" class="text-blue-600 hover:underline mr-2">katsuyokobe@gmail.com</a>
                 <span class="text-gray-500 text-sm">(Japanese, English)</span>
               </div>
             </div>
