--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -66,7 +66,7 @@ import Footer from '../../components/Footer.astro';
             One reason Japan embarked on the path of war was the lack of freedom of speech and publication, which prevented people from expressing their true thoughts. For the sake of future peace in East Asia and the world, jidaisha publishes the "White Paper on Chinese Thought in the 21st Century" to document and convey to the world and future generations the various ideas from this period that cannot be openly, directly, truthfully, and comprehensively expressed within China.
           </p>
           <p class="text-right text-gray-600 mt-8">
-            <span class="block font-medium">Director, jidaisha</span>
+            <span class="block font-medium">Director, JIDAISHA</span>
             <span class="block mt-1">門脇 佳津代</span>
           </p>
         </div>
