--- a/src/pages/zh-cn/about.astro
+++ b/src/pages/zh-cn/about.astro
@@ -33,7 +33,7 @@ import Footer from '../../components/Footer.astro';
                 <span class="text-gray-500 text-sm ml-2">（中文、日文）</span>，
               </div>
               <div>
-                <a href="mailto:katsuyo@gmail.com" class="text-blue-600 hover:underline">katsuyo@gmail.com</a>
+                <a href="mailto:katsuyokobe@gmail.com" class="text-blue-600 hover:underline">katsuyokobe@gmail.com</a>
                 <span class="text-gray-500 text-sm ml-2">（日本語、英語）</span>
               </div>
             </div>
