--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 ---
 <BaseLayout 
-  title="時代社 | 首頁" 
+  title="時代社 - 中國政治思想學術出版社 | 21世紀中國思想白皮書" 
   description="21世紀中國思想白皮書 - 專注中國近現當代政治思想、法治研究、經濟憲政等領域的權威學術著作出版與傳播"
   lang="zh-tw"
   image="https://jidaisha.com/images/brand/logo.png"
